# DevManagePro

./: CMakeLists.txt  Desarrollador.cpp  Desarrollador.h  INSTRUCCIONES.txt  Jefe.cpp  Jefe.h  Menu.cpp  Menu.h  Proyecto.cpp  Proyecto.h  Readme.md  Tarea.cpp  Tarea.h  Trabajador.cpp  Trabajador.h  exampleInput.txt  main.cpp
